# producer-consumer-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: main.cpp  task.cpp  task_queue.cpp  worker_thread.cpp
src/include/: task.h  task_queue.h  worker_thread.h
